@@ -2,16 +2,15 @@ package com.xbrowse.service;
 
 import com.xbrowse.dto.FileItem;
 import com.xbrowse.entity.DirFile;
-import com.xbrowse.entity.IndexedDirectory;
+import com.xbrowse.entity.FileDirectory;
 import com.xbrowse.repository.DirFileRepository;
-import com.xbrowse.repository.IndexedDirectoryRepository;
+import com.xbrowse.repository.FileDirectoryRepository;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.util.*;
-import java.util.stream.Collectors;
 
 /**
  * 文件浏览核心服务
@@ -21,7 +20,7 @@ import java.util.stream.Collectors;
 public class FileBrowseService {
 
     private final DirFileRepository dirFileRepository;
-    private final IndexedDirectoryRepository indexedDirectoryRepository;
+    private final FileDirectoryRepository fileDirectoryRepository;
 
     /**
      * 图片扩展名
@@ -37,10 +36,9 @@ public class FileBrowseService {
             "mp4", "avi", "mkv", "mov", "wmv", "flv", "webm", "m4v"
     );
 
-    public FileBrowseService(DirFileRepository dirFileRepository,
-                             IndexedDirectoryRepository indexedDirectoryRepository) {
+    public FileBrowseService(DirFileRepository dirFileRepository, FileDirectoryRepository fileDirectoryRepository) {
         this.dirFileRepository = dirFileRepository;
-        this.indexedDirectoryRepository = indexedDirectoryRepository;
+        this.fileDirectoryRepository = fileDirectoryRepository;
     }
 
     /**
@@ -48,92 +46,63 @@ public class FileBrowseService {
      */
     public List<FileItem> listFiles(Long engineId, String path, boolean refresh, int page, int perPage, String sortMode) {
         path = normalizePath(path);
+        page = Math.max(page, 1);
+        perPage = Math.max(perPage, 1);
         log.debug("查询目录: engineId={}, path={}, page={}, perPage={}, sort={}", engineId, path, page, perPage, sortMode);
 
-        Optional<IndexedDirectory> directoryOpt = indexedDirectoryRepository.findByEngineIdAndPath(engineId, path);
-        if (directoryOpt.isPresent()) {
-            IndexedDirectory directory = directoryOpt.get();
-            List<FileItem> items = new ArrayList<>();
-            indexedDirectoryRepository.findByEngineIdAndParentIdOrderByNameAsc(engineId, directory.getId()).stream()
-                    .map(this::toDirectoryItem)
-                    .forEach(items::add);
-            dirFileRepository.findByDirectoryIdOrderByNameAsc(directory.getId()).stream()
-                    .map(df -> toFileItem(df, engineId))
-                    .forEach(items::add);
-            items.sort(buildComparator(sortMode));
-            List<FileItem> pageItems = pageItems(items, page, perPage);
-            log.debug("查询结果: engineId={}, path={}, total={}", engineId, path, items.size());
-            return pageItems;
+        Optional<FileDirectory> directoryOpt = fileDirectoryRepository.findByEngineIdAndPath(engineId, path);
+        if (directoryOpt.isEmpty()) {
+            return List.of();
         }
 
-        List<FileItem> fallbackItems = dirFileRepository.findByEngineIdAndParentPathOrderByIsDirDescNameAsc(engineId, path)
-                .stream()
+        FileDirectory directory = directoryOpt.get();
+        List<FileItem> items = new ArrayList<>();
+        items.addAll(fileDirectoryRepository.findByEngineIdAndParentId(engineId, directory.getId()).stream()
+                .map(dir -> toFileItem(dir, engineId))
+                .toList());
+        items.addAll(dirFileRepository.findByDirectoryId(directory.getId()).stream()
                 .map(df -> toFileItem(df, engineId))
-                .sorted(buildComparator(sortMode))
-                .collect(Collectors.toList());
-        log.debug("查询结果(兼容旧数据): engineId={}, path={}, total={}", engineId, path, fallbackItems.size());
-        return pageItems(fallbackItems, page, perPage);
+                .toList());
+
+        items.sort(buildComparator(sortMode));
+        int fromIndex = Math.max(0, (page - 1) * perPage);
+        if (fromIndex >= items.size()) {
+            return List.of();
+        }
+        int toIndex = Math.min(items.size(), fromIndex + perPage);
+        return items.subList(fromIndex, toIndex);
     }
 
     public List<FileItem> searchFiles(Long engineId, String parentPath, String keyword) {
-        String path = normalizePath(parentPath);
-        String lowerKeyword = keyword == null ? "" : keyword.toLowerCase();
-        Optional<IndexedDirectory> directoryOpt = indexedDirectoryRepository.findByEngineIdAndPath(engineId, path);
-        if (directoryOpt.isPresent()) {
-            IndexedDirectory directory = directoryOpt.get();
-            List<FileItem> items = new ArrayList<>();
-            indexedDirectoryRepository.findByEngineIdAndParentIdOrderByNameAsc(engineId, directory.getId()).stream()
-                    .filter(dir -> dir.getName() != null && dir.getName().toLowerCase().contains(lowerKeyword))
-                    .map(this::toDirectoryItem)
-                    .forEach(items::add);
-            dirFileRepository.searchByNameAndDirectoryId(directory.getId(), keyword).stream()
-                    .map(df -> toFileItem(df, engineId))
-                    .forEach(items::add);
-            items.sort(buildComparator("name_asc"));
-            return items;
+        parentPath = normalizePath(parentPath);
+        Optional<FileDirectory> directoryOpt = fileDirectoryRepository.findByEngineIdAndPath(engineId, parentPath);
+        if (directoryOpt.isEmpty()) {
+            return List.of();
         }
 
-        return dirFileRepository.searchByNameAndParentPath(engineId, path, keyword).stream()
+        Long directoryId = directoryOpt.get().getId();
+        List<FileItem> items = new ArrayList<>();
+        items.addAll(fileDirectoryRepository.searchByNameAndParentId(engineId, directoryId, keyword).stream()
+                .map(dir -> toFileItem(dir, engineId))
+                .toList());
+        items.addAll(dirFileRepository.searchByNameAndDirectoryId(directoryId, keyword).stream()
                 .map(df -> toFileItem(df, engineId))
-                .sorted(buildComparator("name_asc"))
-                .collect(Collectors.toList());
+                .toList());
+        items.sort(buildComparator("name_asc"));
+        return items;
     }
 
     private Comparator<FileItem> buildComparator(String sortMode) {
         String mode = sortMode == null ? "name_asc" : sortMode;
-        boolean desc = mode.endsWith("_desc");
-
-        Comparator<FileItem> dirFirst = Comparator.comparing(item -> !Boolean.TRUE.equals(item.getIsDir()));
-        Comparator<FileItem> primary;
-        if (mode.startsWith("time_")) {
-            primary = (left, right) -> compareNullableLong(left.getModified(), right.getModified(), desc);
-        } else {
-            primary = Comparator.comparing(item -> item.getName() == null ? "" : item.getName().toLowerCase());
-            if (desc) {
-                primary = primary.reversed();
-            }
+        Comparator<FileItem> primary = mode.startsWith("time_")
+                ? Comparator.comparing(item -> item.getModified() == null ? 0L : item.getModified())
+                : Comparator.comparing(item -> item.getName() == null ? "" : item.getName().toLowerCase());
+        if (mode.endsWith("_desc")) {
+            primary = primary.reversed();
         }
-        Comparator<FileItem> nameAsc = Comparator.comparing(item -> item.getName() == null ? "" : item.getName().toLowerCase());
-        return dirFirst.thenComparing(primary).thenComparing(nameAsc);
-    }
-
-    private int compareNullableLong(Long left, Long right, boolean desc) {
-        if (left == null && right == null) return 0;
-        if (left == null) return 1;
-        if (right == null) return -1;
-        int compared = left.compareTo(right);
-        return desc ? -compared : compared;
-    }
-
-    private List<FileItem> pageItems(List<FileItem> items, int page, int perPage) {
-        int safePage = Math.max(page, 1);
-        int safePerPage = Math.max(perPage, 1);
-        int start = (safePage - 1) * safePerPage;
-        if (start >= items.size()) {
-            return List.of();
-        }
-        int end = Math.min(start + safePerPage, items.size());
-        return items.subList(start, end);
+        return Comparator.comparing(FileItem::getIsDir, Comparator.nullsLast(Boolean::compareTo)).reversed()
+                .thenComparing(primary)
+                .thenComparing(item -> item.getName() == null ? "" : item.getName().toLowerCase());
     }
 
     /**
@@ -143,60 +112,9 @@ public class FileBrowseService {
         dirPath = normalizePath(dirPath);
         log.debug("获取目录预览图: engineId={}, dirPath={}", engineId, dirPath);
 
-        Optional<IndexedDirectory> directoryOpt = indexedDirectoryRepository.findByEngineIdAndPath(engineId, dirPath);
-        if (directoryOpt.isPresent()) {
-            IndexedDirectory directory = directoryOpt.get();
-            if (directory.getThumbnailUrl() != null) {
-                log.debug("使用缓存的预览图URL: engineId={}, dirPath={}, url={}", engineId, dirPath, directory.getThumbnailUrl());
-                return directory.getThumbnailUrl();
-            }
-
-            List<DirFile> files = dirFileRepository.findByDirectoryIdOrderByNameAsc(directory.getId());
-            for (DirFile df : files) {
-                if (isImageFile(df.getName())) {
-                    String fullPath = buildChildPath(df.getParentPath(), df.getName());
-                    return "/api/files/proxy/" + engineId + "/" + encodePath(fullPath);
-                }
-            }
-
-            List<IndexedDirectory> childDirectories = indexedDirectoryRepository.findByEngineIdAndParentIdOrderByNameAsc(engineId, directory.getId());
-            for (IndexedDirectory child : childDirectories) {
-                if (child.getThumbnailUrl() != null) {
-                    return child.getThumbnailUrl();
-                }
-            }
-            return null;
-        }
-
-        // 兼容升级前仅有 parent_path 的旧数据
-        List<DirFile> items = dirFileRepository.findByEngineIdAndParentPathOrderByIsDirDescNameAsc(engineId, dirPath);
-
-        String firstSubDir = null;
-        for (DirFile df : items) {
-            if (df.getIsDir()) {
-                if (firstSubDir == null) {
-                    firstSubDir = df.getParentPath().endsWith("/")
-                            ? df.getParentPath() + df.getName()
-                            : df.getParentPath() + "/" + df.getName();
-                }
-                continue;
-            }
-            if (isImageFile(df.getName())) {
-                String fullPath = buildChildPath(df.getParentPath(), df.getName());
-                return "/api/files/proxy/" + engineId + "/" + encodePath(fullPath);
-            }
-        }
-
-        if (firstSubDir != null) {
-            List<DirFile> subItems = dirFileRepository.findByEngineIdAndParentPathOrderByIsDirDescNameAsc(engineId, firstSubDir);
-            for (DirFile df : subItems) {
-                if (!df.getIsDir() && isImageFile(df.getName())) {
-                    String fullPath = buildChildPath(df.getParentPath(), df.getName());
-                    return "/api/files/proxy/" + engineId + "/" + encodePath(fullPath);
-                }
-            }
-        }
-        return null;
+        return fileDirectoryRepository.findByEngineIdAndPath(engineId, dirPath)
+                .map(FileDirectory::getThumbnailUrl)
+                .orElse(null);
     }
 
     /**
@@ -231,7 +149,9 @@ public class FileBrowseService {
         fi.setSize(df.getSize());
         fi.setExt(df.getExt());
 
-        String fullPath = buildChildPath(df.getParentPath(), df.getName());
+        String fullPath = df.getParentPath().endsWith("/")
+                ? df.getParentPath() + df.getName()
+                : df.getParentPath() + "/" + df.getName();
         fi.setPath(fullPath);
         if (df.getModifiedTime() != null) {
             fi.setModified(df.getModifiedTime());
@@ -251,18 +171,15 @@ public class FileBrowseService {
         return fi;
     }
 
-    private FileItem toDirectoryItem(IndexedDirectory directory) {
+    private FileItem toFileItem(FileDirectory directory, Long engineId) {
         FileItem fi = new FileItem();
         fi.setName(directory.getName());
         fi.setIsDir(true);
+        fi.setSize(0L);
         fi.setPath(directory.getPath());
-        fi.setUrl(directory.getThumbnailUrl());
         fi.setModified(directory.getModifiedTime());
+        fi.setUrl(directory.getThumbnailUrl());
         return fi;
-    }
-
-    private String buildChildPath(String parentPath, String name) {
-        return parentPath.endsWith("/") ? parentPath + name : parentPath + "/" + name;
     }
 
     /**
